// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PaymentMethodFilter > Mobile Implementation > renders mobile implementation correctly 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="css-view-175oi2r r-WebkitOverflowScrolling-150rngu r-flexDirection-18u37iz r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-lltvgl r-overflowY-buy8e9 r-transform-agouwx r-scrollbarWidth-2eszeu"
    >
      <div
        class="css-view-175oi2r r-flexDirection-18u37iz"
        style="gap: 8px; padding-right: 24px; padding-left: 24px;"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PaymentMethodFilter > Mobile Implementation > renders with iOS supported payment methods 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="css-view-175oi2r r-WebkitOverflowScrolling-150rngu r-flexDirection-18u37iz r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-lltvgl r-overflowY-buy8e9 r-transform-agouwx r-scrollbarWidth-2eszeu"
    >
      <div
        class="css-view-175oi2r r-flexDirection-18u37iz"
        style="gap: 8px; padding-right: 24px; padding-left: 24px;"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PaymentMethodFilter > Mobile Implementation > renders with selected payment method 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="css-view-175oi2r r-WebkitOverflowScrolling-150rngu r-flexDirection-18u37iz r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-lltvgl r-overflowY-buy8e9 r-transform-agouwx r-scrollbarWidth-2eszeu"
    >
      <div
        class="css-view-175oi2r r-flexDirection-18u37iz"
        style="gap: 8px; padding-right: 24px; padding-left: 24px;"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PaymentMethodFilter > Shared Components > renders PaymentMethodItem correctly 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="is_TouchableArea  t_group_true"
      role="button"
      style="display: flex; align-items: stretch; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0px; min-width: 0px; flex-shrink: 0; flex-direction: column; border-top-left-radius: var(--t-radius-rounded12); border-top-right-radius: var(--t-radius-rounded12); border-bottom-right-radius: var(--t-radius-rounded12); border-bottom-left-radius: var(--t-radius-rounded12); cursor: pointer; outline-color: rgba(0, 0, 0, 0); opacity: 1; transform: scale(1);"
      tabindex="0"
    >
      <div
        class="_color-_grouptrue-hover_accent3Hove112785 _backgroundColor-_grouptrue-hover_surface3Hov3121676 _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-gap52 _pt-t-space-spa94665593 _pr-t-space-spa94665593 _pb-t-space-spa94665593 _pl-t-space-spa94665589 _backgroundColor-surface3 _borderTopColor-surface3 _borderRightColor-surface3 _borderBottomColor-surface3 _borderLeftColor-surface3 _borderTopWidth-1px _borderRightWidth-1px _borderBottomWidth-1px _borderLeftWidth-1px _borderTopLeftRadius-t-radius-ro291586453 _borderTopRightRadius-t-radius-ro291586453 _borderBottomRightRadius-t-radius-ro291586453 _borderBottomLeftRadius-t-radius-ro291586453 _color-accent3 _borderBottomStyle-solid _borderTopStyle-solid _borderLeftStyle-solid _borderRightStyle-solid"
      >
        <div
          fill="none"
          stroke-width="8"
          style="width: 20px; height: 20px; color: rgb(255, 255, 255);"
          viewbox="0 0 20 20"
        >
          <div
            d="M2.5 6.36549C2.5 6.06293 2.67292 5.78699 2.94519 5.65505L8.96698 2.73705C9.61922 2.42098 10.3803 2.42099 11.0325 2.73705L17.0543 5.65505C17.3266 5.78699 17.4995 6.06293 17.4995 6.36549V7.26185C17.4995 7.27251 17.4993 7.28312 17.4989 7.29368C17.4993 7.30381 17.4995 7.31399 17.4995 7.32423C17.4995 7.72565 17.1741 8.05106 16.7727 8.05106H16.7294L16.7101 8.0513H3.28945L3.27012 8.05106H3.22684C2.82542 8.05106 2.5 7.72565 2.5 7.32423C2.5 7.31399 2.50021 7.30381 2.50063 7.29368C2.50021 7.28312 2.5 7.27251 2.5 7.26185V6.36549Z"
            fill="currentColor"
          />
          <div
            d="M4.03958 14.5926C3.60358 14.5926 3.25013 14.9461 3.25013 15.3821V16.7106C3.25013 17.1466 3.60358 17.5 4.03958 17.5H15.9602C16.3962 17.5 16.7497 17.1466 16.7497 16.7106V15.3821C16.7497 14.9461 16.3962 14.5926 15.9602 14.5926H4.03958Z"
            fill="currentColor"
          />
          <div
            d="M6.13177 8.97352C5.69577 8.97352 5.34232 9.32697 5.34232 9.76297V12.9208C5.34232 13.3568 5.69577 13.7102 6.13177 13.7102H6.28966C6.72566 13.7102 7.0791 13.3568 7.0791 12.9208V9.76297C7.0791 9.32697 6.72566 8.97352 6.28966 8.97352H6.13177Z"
            fill="currentColor"
          />
          <div
            d="M9.13151 9.76297C9.13151 9.32697 9.48496 8.97352 9.92096 8.97352H10.0788C10.5148 8.97352 10.8683 9.32697 10.8683 9.76297V12.9208C10.8683 13.3568 10.5148 13.7102 10.0788 13.7102H9.92096C9.48496 13.7102 9.13151 13.3568 9.13151 12.9208V9.76297Z"
            fill="currentColor"
          />
          <div
            d="M13.7102 8.97352C13.2742 8.97352 12.9207 9.32697 12.9207 9.76297V12.9208C12.9207 13.3568 13.2742 13.7102 13.7102 13.7102H13.868C14.304 13.7102 14.6575 13.3568 14.6575 12.9208V9.76297C14.6575 9.32697 14.304 8.97352 13.868 8.97352H13.7102Z"
            fill="currentColor"
          />
        </div>
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-smal108 _lineHeight-f-lineHeigh1269072494 _fontWeight-f-weight-bo3548"
          data-disable-theme="true"
        >
          Bank
        </span>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PaymentMethodFilter > Shared Components > renders PaymentMethodItem when not selected 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="is_TouchableArea  t_group_true"
      role="button"
      style="display: flex; align-items: stretch; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0px; min-width: 0px; flex-shrink: 0; flex-direction: column; border-top-left-radius: var(--t-radius-rounded12); border-top-right-radius: var(--t-radius-rounded12); border-bottom-right-radius: var(--t-radius-rounded12); border-bottom-left-radius: var(--t-radius-rounded12); cursor: pointer; outline-color: rgba(0, 0, 0, 0); opacity: 1; transform: scale(1);"
      tabindex="0"
    >
      <div
        class="_color-_grouptrue-hover_accent3Hove112785 _backgroundColor-_grouptrue-hover_surface1Hov3121676 _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-gap52 _pt-t-space-spa94665593 _pr-t-space-spa94665593 _pb-t-space-spa94665593 _pl-t-space-spa94665589 _backgroundColor-surface1 _borderTopColor-surface3 _borderRightColor-surface3 _borderBottomColor-surface3 _borderLeftColor-surface3 _borderTopWidth-1px _borderRightWidth-1px _borderBottomWidth-1px _borderLeftWidth-1px _borderTopLeftRadius-t-radius-ro291586453 _borderTopRightRadius-t-radius-ro291586453 _borderBottomRightRadius-t-radius-ro291586453 _borderBottomLeftRadius-t-radius-ro291586453 _color-accent3 _borderBottomStyle-solid _borderTopStyle-solid _borderLeftStyle-solid _borderRightStyle-solid"
      >
        <div
          fill="none"
          stroke-width="8"
          style="width: 20px; height: 20px; color: rgb(255, 255, 255);"
          viewbox="0 0 24 24"
        >
          <div
            d="M21 8V9.25H3V8C3 6 4 5 6 5H18C20 5 21 6 21 8ZM21 10.75V16C21 18 20 19 18 19H6C4 19 3 18 3 16V10.75H21ZM10.75 15C10.75 14.586 10.414 14.25 10 14.25H7C6.586 14.25 6.25 14.586 6.25 15C6.25 15.414 6.586 15.75 7 15.75H10C10.414 15.75 10.75 15.414 10.75 15Z"
            fill="currentColor"
          />
        </div>
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-smal108 _lineHeight-f-lineHeigh1269072494 _fontWeight-f-weight-bo3548"
          data-disable-theme="true"
        >
          Debit
        </span>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PaymentMethodFilter > Web Implementation > renders web implementation correctly 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-gap56 _overflowX-scroll _overflowY-scroll _scrollbarWidth-none"
    />
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PaymentMethodFilter > Web Implementation > renders with Android supported payment methods 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-gap56 _overflowX-scroll _overflowY-scroll _scrollbarWidth-none"
    />
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PaymentMethodFilter > Web Implementation > renders with iOS supported payment methods 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-gap56 _overflowX-scroll _overflowY-scroll _scrollbarWidth-none"
    />
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PaymentMethodFilter > Web Implementation > renders with selected payment method 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-gap56 _overflowX-scroll _overflowY-scroll _scrollbarWidth-none"
    />
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PaymentMethodFilter > Web Implementation > renders with web-specific props 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-gap56 _overflowX-scroll _overflowY-scroll _scrollbarWidth-none _width-24px"
      data-testid="web-filter"
    />
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
